--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
     "jquery-popup-overlay": "^2.1.1",
+    "simplebar": "^4.1.0",
     "svg4everybody": "^2.1.9",
     "tabslet": "^1.7.3"
   },
